--- a/simplernn.ipynb
+++ b/simplernn.ipynb
@@ -13,14 +13,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'numpy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mtf\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdatasets\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m imdb\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\ka\\AI-Projects\\SimpleRNN\\simple_rnn_imdb\\venvrnn\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
      ]
     }
    ],
@@ -35,13 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb.npz\n",
+      "17464789/17464789 [==============================] - 3s 0us/step\n",
       "Training data shape: (25000,), Training labels shape: (25000,)\n",
       "Testing data shape: (25000,), Testing labels shape: (25000,)\n"
      ]
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +286,7 @@
        " 1)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -321,9 +320,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb_word_index.json\n",
+      "1641221/1641221 [==============================] - 1s 0us/step\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1330,7 +1337,7 @@
        " ...}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1354,7 +1361,7 @@
        "\"? this film was just brilliant casting location scenery story direction everyone's really suited the part they played and you could just imagine being there robert ? is an amazing actor and now the same being director ? father came from the same scottish island as myself so i loved the fact there was a real connection with this film the witty remarks throughout the film were great it was just brilliant so much that i bought the film as soon as it was released for ? and would recommend it to everyone to watch and the fly fishing was amazing really cried at the end it was so sad and you know what they say if you cry at a film it must have been good and this definitely was also ? to the two little boy's that played the ? of norman and paul they were just brilliant children are often left out of the ? list i think because the stars that play them all grown up are such a big profile for the whole film but these children are amazing and should be praised for what they have done don't you think the whole story was so lovely because it was true and was someone's life after all that was shared with us all\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1388,7 @@
        "       [   0,    0,    0, ...,  204,  131,    9]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1459,7 @@
        "         16, 5345,   19,  178,   32])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1463,9 +1470,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\ka\\AI-Projects\\SimpleRNN\\simple_rnn_imdb\\venvrnn\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "## Train Simple RNN\n",
     "model=Sequential()\n",
@@ -1476,22 +1492,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " embedding_1 (Embedding)     (None, 500, 128)          1280000   \n",
+      " embedding (Embedding)       (None, 500, 128)          1280000   \n",
       "                                                                 \n",
-      " simple_rnn_1 (SimpleRNN)    (None, 128)               32896     \n",
+      " simple_rnn (SimpleRNN)      (None, 128)               32896     \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 1)                 129       \n",
+      " dense (Dense)               (None, 1)                 129       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 1313025 (5.01 MB)\n",
@@ -1507,25 +1523,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\ka\\AI-Projects\\SimpleRNN\\simple_rnn_imdb\\venvrnn\\Lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "model.compile(optimizer='adam',loss='binary_crossentropy',metrics=['accuracy'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.EarlyStopping at 0x19705afc0d0>"
+       "<keras.src.callbacks.EarlyStopping at 0x18e1b697e90>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1547,25 +1572,27 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "625/625 [==============================] - 49s 77ms/step - loss: 9197.4336 - accuracy: 0.6139 - val_loss: 0.5950 - val_accuracy: 0.6720\n",
+      "WARNING:tensorflow:From c:\\Users\\ka\\AI-Projects\\SimpleRNN\\simple_rnn_imdb\\venvrnn\\Lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\ka\\AI-Projects\\SimpleRNN\\simple_rnn_imdb\\venvrnn\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "625/625 [==============================] - 60s 94ms/step - loss: 4.2761 - accuracy: 0.6166 - val_loss: 0.5501 - val_accuracy: 0.7140\n",
       "Epoch 2/10\n",
-      "625/625 [==============================] - 48s 77ms/step - loss: 21616.6875 - accuracy: 0.6833 - val_loss: 0.6097 - val_accuracy: 0.6444\n",
+      "625/625 [==============================] - 58s 93ms/step - loss: 0.5758 - accuracy: 0.7217 - val_loss: 0.5688 - val_accuracy: 0.6940\n",
       "Epoch 3/10\n",
-      "625/625 [==============================] - 49s 78ms/step - loss: 0.5123 - accuracy: 0.7465 - val_loss: 0.5244 - val_accuracy: 0.7218\n",
+      "625/625 [==============================] - 58s 92ms/step - loss: 0.4300 - accuracy: 0.8102 - val_loss: 0.4655 - val_accuracy: 0.7790\n",
       "Epoch 4/10\n",
-      "625/625 [==============================] - 49s 79ms/step - loss: 16.1929 - accuracy: 0.7918 - val_loss: 0.6155 - val_accuracy: 0.6352\n",
+      "625/625 [==============================] - 58s 93ms/step - loss: 0.2696 - accuracy: 0.8888 - val_loss: 0.4060 - val_accuracy: 0.8174\n",
       "Epoch 5/10\n",
-      "625/625 [==============================] - 49s 78ms/step - loss: 52.9721 - accuracy: 0.7521 - val_loss: 0.6609 - val_accuracy: 0.5842\n",
+      "625/625 [==============================] - 59s 94ms/step - loss: 0.2508 - accuracy: 0.8949 - val_loss: 0.4958 - val_accuracy: 0.7768\n",
       "Epoch 6/10\n",
-      "625/625 [==============================] - 48s 77ms/step - loss: 0.5073 - accuracy: 0.7298 - val_loss: 0.5569 - val_accuracy: 0.7086\n",
+      "625/625 [==============================] - 59s 94ms/step - loss: 0.1877 - accuracy: 0.9285 - val_loss: 0.4881 - val_accuracy: 0.8028\n",
       "Epoch 7/10\n",
-      "625/625 [==============================] - 49s 79ms/step - loss: 0.3661 - accuracy: 0.8482 - val_loss: 0.5162 - val_accuracy: 0.7846\n",
+      "625/625 [==============================] - 58s 93ms/step - loss: 0.1527 - accuracy: 0.9435 - val_loss: 0.6031 - val_accuracy: 0.7612\n",
       "Epoch 8/10\n",
-      "625/625 [==============================] - 49s 78ms/step - loss: 0.2790 - accuracy: 0.9042 - val_loss: 0.4580 - val_accuracy: 0.8026\n",
+      "625/625 [==============================] - 58s 92ms/step - loss: 0.1273 - accuracy: 0.9534 - val_loss: 0.5944 - val_accuracy: 0.8184\n",
       "Epoch 9/10\n",
-      "625/625 [==============================] - 49s 79ms/step - loss: 0.2253 - accuracy: 0.9232 - val_loss: 0.4582 - val_accuracy: 0.8022\n",
-      "Epoch 10/10\n",
-      "625/625 [==============================] - 49s 78ms/step - loss: 0.1795 - accuracy: 0.9412 - val_loss: 0.5084 - val_accuracy: 0.8114\n"
+      "625/625 [==============================] - 58s 94ms/step - loss: 0.0890 - accuracy: 0.9688 - val_loss: 0.6545 - val_accuracy: 0.8010\n"
      ]
     }
    ],
@@ -1580,14 +1607,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "e:\\UDemy Final\\Deep Learning NLP\\venv\\Lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "c:\\Users\\ka\\AI-Projects\\SimpleRNN\\simple_rnn_imdb\\venvrnn\\Lib\\site-packages\\keras\\src\\engine\\training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
       "  saving_api.save_model(\n"
      ]
     }
@@ -1621,7 +1648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
